Subida de archivos

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
     <a href="#" onclick="signOut();">Sign out</a>
     <script>
@@ -44,6 +45,12 @@
             xhr.send('idtoken=' + id_token);
         }
     </script>
+    </BR>
+    </BR>
+    </BR>
+    <!-- <img src="http://localhost:3000/imagen/usuarios/5c22abe6e7651663681ad314-199.jpg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c3VhcmlvIjp7InJvbGUiOiJBRE1JTl9ST0xFIiwiZXN0YWRvIjp0cnVlLCJnb29nbGUiOmZhbHNlLCJfaWQiOiI1YzIyYWJlNmU3NjUxNjYzNjgxYWQzMTQiLCJub21icmUiOiJUZXN0IDEiLCJlbWFpbCI6InRlc3QxQGdtYWlsLmNvbSIsIl9fdiI6MCwiaW1nIjoiNWMyMmFiZTZlNzY1MTY2MzY4MWFkMzE0LTE5OS5qcGcifSwiaWF0IjoxNTQ2MjY1MjA0LCJleHAiOjE1NDY0MzgwMDR9.9dHByF6VWT_-a2_BGUVgjPBjdz-Y8P76pRCH0SSQPK4"
+        alt=""> -->
+
 </body>
 
 </html>
